alteração de layout issue #4
alinhamento da data 'ultimas fotos' album

--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,7 @@ background-repeat:no-repeat;
 }
 .gc.ttdata.posicaodata{
 font-size:33px;
-line-height:40px;
+line-height:35px;
 position:absolute;
 text-align:right;
 }
